kubernetes/prod-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod-ns
  labels:
    app: karsajob
