kubernetes/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order
  labels:
    app: order
    service: order
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: order
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-v1
  labels:
    app: order
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
      version: v1
  template:
    metadata:
      labels:
        app: order
        version: v1
    spec:
      serviceAccountName: eca-order
      containers:
      - name: order
        image: ghcr.io/muhaimin-a8/order_service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        securityContext:
          runAsUser: 1000
---
