kubernetes/rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
    service: rabbitmq
spec:
  ports:
  - port: 5672
  selector:
    app: rabbitmq
