kubernetes/shipping-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping
  labels:
    app: shipping
    service: shipping
spec:
  ports:
  - port: 3001
    name: http
  selector:
    app: shipping
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping-v1
  labels:
    app: shipping
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipping
      version: v1
  template:
    metadata:
      labels:
        app: shipping
        version: v1
    spec:
      serviceAccountName: eca-shipping
      containers:
      - name: shipping
        image: ghcr.io/muhaimin-a8/shipping_service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3001
        securityContext:
          runAsUser: 1000
---
